[gd_scene load_steps=2 format=3 uid="uid://cdjbtei4c0lxu"]

[ext_resource type="Script" path="res://scene/mini_games/penguin_of_snowshima/penguin_of_snowshima.gd" id="1_b5cyl"]

[node name="PenguinOfSnowshima" type="Node"]
script = ExtResource("1_b5cyl")

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(42, 24)

[node name="Label1" type="Label" parent="Node2D"]
custom_minimum_size = Vector2(10, 0)
offset_left = -26.0
offset_top = 4.0
offset_right = -16.0
offset_bottom = 21.0
theme_override_font_sizes/font_size = 13
text = "↓"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Node2D"]
custom_minimum_size = Vector2(10, 0)
offset_left = -13.0
offset_top = 4.0
offset_right = -3.0
offset_bottom = 21.0
theme_override_font_sizes/font_size = 13
text = "↑"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="Node2D"]
custom_minimum_size = Vector2(10, 0)
offset_left = 1.0
offset_top = 4.0
offset_right = 14.0
offset_bottom = 21.0
theme_override_font_sizes/font_size = 13
text = "←"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="Node2D"]
custom_minimum_size = Vector2(10, 0)
offset_left = 16.0
offset_top = 4.0
offset_right = 29.0
offset_bottom = 21.0
theme_override_font_sizes/font_size = 13
text = "→"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SceneTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 84.0
offset_bottom = 48.0

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
max_value = 5.0
step = 0.25
value = 5.0
show_percentage = false
